# dailyworker

./: .gitignore  Cargo.toml  Makefile  README  README.md  TODO  pubspec.yaml
data/ui/: design.glade  design.glade~
debian/: debian.yaml
debian/gui/: anykexport.desktop
integration_test/: simple_test.dart
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  table.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: demo.dart  simple.dart  worker.dart
linux/: CMakeLists.txt
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs  xml.rs
rust/src/api/: mod.rs  simple.rs  worker.rs
src/: icon.rs  id.rs  import.rs  main.rs  model.rs  style.rs  worker.rs  xml.rs
