[package]
name = "dailyworker"
version = "0.1.0"
authors = ["Peter <mezeipetister@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib-sys = "^0"
gobject-sys = "^0"
glib = "^0"
gio = "^0"
gdk = "^0"
gtk = "^0"
gdk-pixbuf = "^0"
cairo-rs = "^0"
pango = "^0"
pangocairo = "^0"
chrono = { version = "0.4", features = ["serde"] }
storaget = "*"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
nanoid = "*"
dirs = "*"
simple_xml_serialize = "*"
