[package]
name = "dailyworker"
version = "0.9.3"
edition = "2021"

[dependencies]
iced = { version = "0.6", features = ["canvas", "tokio", "debug"]}
time = { version = "0.3.5", features = ["local-offset"] }
dirs = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = { version = "0.4", features = ["serde"] }
simple_xml_serialize = "*"
native-dialog = "0.6.3"
uuid = {version="*", features=["v4", "serde"]}