[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.0.0-dev.22", features = [
    "uuid",
    "chrono",
] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
chrono = { version = "0.4", features = ["serde"] }
simple_xml_serialize = "0.3.0"
# native-dialog = "0.6.3"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
dirs = "5.0.1"
